<resources>
    <string name="app_name">Dairy Products Company App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">sign in</string>
    <string name="login">login</string>
    <string name="sign_out">Sign out</string>
    <string name="name_company">Name Company:</string>
    <string name="phone_number">phone Number:</string>
    <string name="add_product">Add Product</string>
    <string name="save">Save</string>
    <string name="name_product">Name Product</string>
    <string name="price">Price</string>
    <string name="nameproduct">NameProduct</string>
    <string name="phonecompany">PhoneCompany</string>
    <string name="sendorder">sendOrder</string>
    <string name="titleDialog">SendOrder</string>
    <string name="dialogMassage">are you sure</string>
    <string name="canceldialog">cancel</string>
    <string name="sendDialog">send</string>
    <string name="button">Button</string>
    <string name="order">order</string>
    <string name="edit">edit</string>
    <string name="quantity">Quantity</string>
    <string name="add_fragment">AddProfileCompany</string>
    <string name="my_customer_order">My customer order</string>
    <string name="check_if_you_done">check if you done</string>
    <string name="done">Done</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="them" translatable="false">theme</string>
    <!--    <string name="theme_preference_key">KeyPref</string>-->
    <string name="dark_theme_description">DarkTheme</string>
    <string name="light_theme_description">LightTheme</string>
    <string name="system_theme_description" translatable="false">SystemTheme</string>
    <string name="title_activity_main_splash_screen" translatable="false">MainActivitySplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="dark_theme_preference_value">DarkThem</string>
    <string name="light_theme_preference_value">LightThem</string>
    <string name="system_theme_preference_value" translatable="false">System Default</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="theme_preference_key" translatable="false">ThemeKey</string>
    <string name="add">add</string>
    <string name="profile">profile</string>
    <string name="home">home</string>
    <string name="setting">setting</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="name_profile">Name Profile</string>
    <string name="toast_sign_in">YOU NOT SIGNIN</string>
    <!--    <string name="quantity">quantity %s</string>-->
</resources>