<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/listFragment"
        android:icon="@drawable/ic_baseline_home_24"
        app:showAsAction="always"
        android:title="@string/home"/>
    <item
        android:id="@+id/profileFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"/>

    <item
        android:id="@+id/addFragment"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"/>


    <item
        android:id="@+id/orderListFragment"
        app:showAsAction="always"
        android:icon="@drawable/orders"
        android:title="@string/order"/>

    <item
        android:id="@+id/settingsFragment"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting"/>

</menu>