<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addCompanyUi.AddFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_company"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        android:hint="@string/name_company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_product"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="300dp"
        android:hint="@string/nameproduct"
        app:layout_constraintBottom_toTopOf="@+id/Add_product"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_phone_number"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        android:hint="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_company">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone_number1"
            android:layout_width="match_parent"
            android:phoneNumber="true"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/image_company"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="4dp"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        tools:src="@tools:sample/avatars" />

    <EditText
        android:id="@+id/price"
        android:layout_width="99dp"
        android:hint="Price"
        android:numeric="integer"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="300dp"
        app:layout_constraintBottom_toTopOf="@+id/Add_product"
        app:layout_constraintStart_toEndOf="@+id/name_product" />

    <Button
        android:id="@+id/Add_product"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginBottom="12dp"
        android:text="@string/add_product"
        app:layout_constraintBottom_toTopOf="@+id/Save_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Save_product"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>



