<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editProductUi.EditProductFragment">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_company"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/name_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_company">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name_company"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_product"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="64dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/name_product"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_name_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        android:hint="@string/phone_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_company">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone_number1"
            android:layout_width="match_parent"
            android:phoneNumber="true"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/image_company"
        android:layout_width="139dp"
        android:layout_height="143dp"
        android:focusable="true"
        android:padding="6dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/price"
    android:layout_width="183dp"
    android:layout_height="58dp"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_marginTop="64dp"
    android:hint="@string/price"
    android:numeric="integer"
    app:layout_constraintStart_toEndOf="@+id/name_product"
    app:layout_constraintTop_toBottomOf="@+id/edit_phone_number">




    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/price_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:phoneNumber="true" />



</com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/Save_product"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>