<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".detailCompanyUi.DetailCompanyFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.dairyproductscompanyapp.detailCompanyUi.DetailViewModel" />


    </data>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@drawable/abstract_background_ripple_milk_illustration_260nw_448145299"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/minus_one"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:text="@string/button"
            app:icon="@drawable/ic_baseline_remove_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quantity_number" />

        <TextView
            android:id="@+id/name_company_detail"
            android:layout_width="212dp"
            android:layout_height="52dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_company_detail" />

        <TextView
            android:id="@+id/name_phone_detail"
            android:layout_width="208dp"
            android:layout_height="47dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_company_detail" />

        <TextView
            android:id="@+id/name_product_detail"
            android:layout_width="219dp"
            android:layout_height="63dp"
            android:layout_marginTop="172dp"
            android:layout_marginBottom="119dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_phone_detail" />

        <TextView
            android:id="@+id/price_detail"
            android:layout_width="97dp"
            android:layout_height="60dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="172dp"
            android:layout_marginBottom="122dp"
            android:fontFamily="sans-serif-medium"
            style="@style/Widget.MaterialComponents.TextView"
            android:text="$52"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/name_product_detail"
            app:layout_constraintTop_toBottomOf="@+id/name_phone_detail" />

        <ImageView
            android:id="@+id/image_company_detail"
            android:layout_width="413dp"
            android:layout_height="121dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/quantity_number"
            android:layout_width="63dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:text="@{viewModel.quantity.toString()}"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintStart_toEndOf="@+id/price_detail"
            app:layout_constraintTop_toTopOf="@+id/price_detail" />

        <Button
            android:id="@+id/plus_one"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:drawableBottom="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toTopOf="@+id/quantity_number"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/orderButton"
            android:layout_width="195dp"
            android:layout_height="59dp"
            android:text="@string/order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="192dp"
            android:layout_height="53dp"
            android:layout_marginEnd="108dp"
            android:text="@string/edit"
            app:layout_constraintBottom_toTopOf="@+id/orderButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minus_one"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="189dp"
            android:layout_height="51dp"
            android:layout_marginTop="32dp"
            android:text="@string/name_company"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/name_company_detail"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_company_detail" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="193dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/name_phone_detail"
            app:layout_constraintHorizontal_bias="0.372"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="84dp"
            android:layout_height="29dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/price"
            app:layout_constraintBottom_toTopOf="@+id/price_detail"
            app:layout_constraintEnd_toStartOf="@+id/plus_one" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="155dp"
            android:layout_height="30dp"
            android:layout_marginStart="61dp"
            android:text="@string/name_product"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/name_product_detail"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>