<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editProfileUi.EditProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/date_picker"
            android:layout_width="48dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_date_range_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="232dp"
            android:layout_height="212dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/edit_name_profile"
               android:layout_width="match_parent"
               android:layout_height="match_parent"/>




        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name">


<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/edit_email"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_of_birth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="362dp"
            android:layout_height="57dp"
            android:hint="DateBirth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_birth_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numeric="integer" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save_edit"
            android:layout_width="191dp"
            android:layout_height="58dp"
            android:layout_marginBottom="16dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>